# wetwire-aws-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  hatch_build.py  pyproject.toml  pyrightconfig.json
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml  publish.yml
codegen/: __init__.py  config.py  extract_enums.py  fetch.py  fetcher.py  generate.py  parse.py  sam_spec.py  schema.py
docs/: ADOPTION.md  AWS-KIRO-CLI.md  CF_INTERNALS.md  CLI.md  CODEGEN.md  COMPARISON.md  DEVELOPERS.md  EXAMPLES.md  FAQ.md  IMPORT_WORKFLOW.md  INTERNALS.md  LINT_RULES.md  QUICK_START.md  SAM.md  VERSIONING.md  draft-order-independent-loading.md
examples/: README.md
examples/aws-cloudformation-templates/adconnector_cfn/ADCONNECTOR_cfn/: __init__.py  __init__.pyi  __main__.py  compute.py  main.py  monitoring.py  network.py  outputs.py  params.py  security.py
examples/aws-cloudformation-templates/amazon_linux/amazon_linux/: __main__.py  compute.py  network.py  params.py
examples/aws-cloudformation-templates/amazon_linux_1/amazon_linux_1/: __init__.py  __init__.pyi  __main__.py  compute.py  params.py
examples/aws-cloudformation-templates/amazon_linux_2/amazon_linux_2/: __init__.pyi  __main__.py  compute.py  params.py
examples/aws-cloudformation-templates/amzn2_greengrass_cfn/amzn2_greengrass_cfn/: __init__.py  __init__.pyi  __main__.py  compute.py  main.py  network.py  outputs.py  params.py  security.py
examples/aws-cloudformation-templates/amzn2_greengrass_cfn_pkg/amzn2_greengrass_cfn_pkg/: __init__.pyi  __main__.py  compute.py  main.py  network.py  outputs.py  params.py  security.py
examples/aws-cloudformation-templates/apigateway_lambda_integration/apigateway_lambda_integration/: __init__.pyi  __main__.py  compute.py  main.py  params.py  security.py
examples/aws-cloudformation-templates/apprunnerservicefromecr/AppRunnerServiceFromECR/: __init__.py  __init__.pyi  __main__.py  main.py  outputs.py  params.py  security.py
examples/aws-cloudformation-templates/autoscalingmultiazwithnotifications/AutoScalingMultiAZWithNotifications/: __init__.py  __init__.pyi  __main__.py  compute.py  messaging.py  monitoring.py  network.py  outputs.py  params.py
examples/aws-cloudformation-templates/autoscalingrollingupdates/AutoScalingRollingUpdates/: __init__.pyi  __main__.py  compute.py  network.py  params.py  security.py
examples/aws-cloudformation-templates/autoscalingscheduledaction/AutoScalingScheduledAction/: __init__.py  __init__.pyi  __main__.py  compute.py  network.py  outputs.py  params.py
examples/aws-cloudformation-templates/centos/centos/: __init__.pyi  __main__.py  compute.py  params.py
examples/aws-cloudformation-templates/centos_1/centos_1/: __init__.py  __init__.pyi  __main__.py  compute.py  params.py
examples/aws-cloudformation-templates/centos_2/centos_2/: __init__.pyi  __main__.py  compute.py  params.py
examples/aws-cloudformation-templates/cfn_endpoint_creationpolicy/cfn_endpoint_creationpolicy/: __init__.py  __init__.pyi  __main__.py  compute.py  network.py  outputs.py  params.py  security.py
examples/aws-cloudformation-templates/cfn_endpoint_creationpolicy_no_igw/cfn_endpoint_creationpolicy_no_igw/: __init__.py  __init__.pyi  __main__.py  compute.py  network.py  outputs.py  params.py
examples/aws-cloudformation-templates/cfn_endpoint_waitcondition/cfn_endpoint_waitcondition/: __init__.pyi  __main__.py  compute.py  infra.py  main.py  network.py  outputs.py  security.py
examples/aws-cloudformation-templates/cfn_endpoint_waitcondition_no_igw/cfn_endpoint_waitcondition_no_igw/: __init__.py  __init__.pyi  __main__.py  compute.py  infra.py  main.py  network.py  outputs.py  params.py
examples/aws-cloudformation-templates/cloudformation_codebuild_template/cloudformation_codebuild_template/: __init__.py  __init__.pyi  __main__.py  cicd.py  outputs.py  params.py  security.py  storage.py
examples/aws-cloudformation-templates/cloudformation_codepipeline_template/cloudformation_codepipeline_template/: __init__.py  (+7 more)
scripts/: check-generated-types.sh  ci.sh  dev-setup.sh  fix_templates.py  generate_serverless.py  import_aws_samples.py  import_aws_samples.sh  import_sam_samples.py  regenerate.sh
specs/: manifest.json
src/wetwire_aws/: __init__.py  base.py  base.pyi  cli.py  cli_utils.py  constants.py  context.py  decorator.py  graph.py  loader.py  mcp_server.py  naming.py  params.py  provider.py  stubs.py  template.py  typing.py
src/wetwire_aws/importer/: __init__.py  ir.py  parser.py
src/wetwire_aws/intrinsics/: __init__.py  functions.py  pseudo.py  refs.py
src/wetwire_aws/kiro/: __init__.py  agent_config.json  installer.py
src/wetwire_aws/linter/: __init__.py  ast_helpers.py  rules.py  splitting.py
src/wetwire_aws/resources/: __init__.py
src/wetwire_aws/testing/: __init__.py  semantic_compare.py
tests/: __init__.py  conftest.py  test_base.py  test_cli.py  test_constants.py  test_context.py  test_cross_file_refs.py  test_dataclass_dsl_integration.py  test_graph.py  test_intrinsics.py  test_kiro_installer.py  test_kiro_integration.py  test_mcp_server.py  test_provider.py  test_resources.py  test_semantic_compare.py  test_serverless.py  test_stubs.py  test_template.py  test_typing.py
tests/codegen/: test_extract_enums_sam.py  test_generate_sam.py  test_parse_sam.py  test_sam_spec.py
tests/cross_file_test/: __init__.py  function.py  role.py
tests/importer/: __init__.py  test_cli.py  test_codegen.py  test_integration.py  test_parser.py  test_sam.py
tests/importer/templates/: bucket_with_policy.yaml  bucket_with_ref.yaml  bucket_with_tags.yaml  intrinsics.yaml  sam_api_function.yaml  sam_function.yaml  sam_implicit_resources.yaml  sam_table.yaml  simple_bucket.json  simple_bucket.yaml
tests/linter/: __init__.py  test_cli.py  test_rules.py
tests/linter/test_rules/: __init__.py  conftest.py  test_circular.py  test_enum.py  test_file.py  test_import.py  test_integration.py  test_intrinsic.py  test_parameter.py  test_pseudo.py  test_reference.py  test_security.py  test_splitting.py  test_style.py
(+2256 files in other folders)
