[build-system]
requires = [
    "hatchling",
    # AWS-specific codegen dependencies
    "jinja2>=3.1",
    "botocore>=1.34",
]
build-backend = "hatchling.build"

[project]
name = "wetwire-aws"
version = "0.3.0"
description = "AWS CloudFormation synthesis for wetwire"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Alex Artigues", email = "albert.a.artigues@gmail.com" }
]
keywords = [
    "aws",
    "cloudformation",
    "infrastructure",
    "dataclasses",
    "iac",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "dataclass-dsl>=0.1.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "pyright>=1.1",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]
codegen = [
    "requests>=2.28",
    "jinja2>=3.1",
    "botocore>=1.34",
]
agent = [
    "wetwire-core>=0.1.0",
    "anthropic>=0.40.0",
]

[dependency-groups]
dev = [
    "botocore>=1.34",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "pyright>=1.1",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "types-PyYAML>=6.0",
]
codegen = [
    "jinja2>=3.1",
    "botocore>=1.34",
]

[project.urls]
Homepage = "https://github.com/lex00/wetwire-aws-python"
Documentation = "https://github.com/lex00/wetwire-aws-python#readme"
Repository = "https://github.com/lex00/wetwire-aws-python"
Issues = "https://github.com/lex00/wetwire-aws-python/issues"

[project.scripts]
wetwire-aws = "wetwire_aws.cli:main"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/codegen",
    "/tests",
    "/scripts",
    "/README.md",
    "/pyproject.toml",
    "/hatch_build.py",
]
exclude = [
    "/.git",
    "/.venv",
    "/.pytest_cache",
    "/__pycache__",
    "*.pyc",
    "/specs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wetwire_aws"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = [
    "src/wetwire_aws/resources",
    "src/wetwire_aws/importer/parser.py",  # YAML constructor typing complex
    "src/wetwire_aws/linter/rules.py",  # AST typing complex
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["src/wetwire_aws/resources"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=wetwire_aws --cov-report=term-missing"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/wetwire_aws"]
omit = ["*/tests/*", "*/codegen/*", "*/resources/*"]

