[build-system]
requires = [
    "hatchling",
    # AWS-specific codegen dependencies
    "jinja2>=3.1",
    "botocore>=1.34",
]
build-backend = "hatchling.build"

[project]
name = "wetwire-aws"
version = "1.7.4"
description = "AWS CloudFormation synthesis for wetwire"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Alex Artigues", email = "albert.a.artigues@gmail.com" }
]
keywords = [
    "aws",
    "cloudformation",
    "infrastructure",
    "dataclasses",
    "iac",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "dataclass-dsl>=1.1.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ty>=0.0.1a0",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]
codegen = [
    "requests>=2.28",
    "jinja2>=3.1",
    "botocore>=1.34",
]
agent = [
    "wetwire-core>=1.0.1",
    "anthropic>=0.40.0",
]
kiro = [
    "mcp>=1.0.0",
]

[dependency-groups]
dev = [
    "botocore>=1.34",
    "ty>=0.0.1a0",
    "pre-commit>=3.6",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "types-PyYAML>=6.0",
    "pyright>=1.1.407",
]
codegen = [
    "jinja2>=3.1",
    "botocore>=1.34",
]

[project.urls]
Homepage = "https://github.com/lex00/wetwire-aws-python"
Documentation = "https://github.com/lex00/wetwire-aws-python#readme"
Repository = "https://github.com/lex00/wetwire-aws-python"
Issues = "https://github.com/lex00/wetwire-aws-python/issues"

[project.scripts]
wetwire-aws = "wetwire_aws.cli:main"
wetwire-aws-mcp = "wetwire_aws.mcp_server:main"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/codegen",
    "/tests",
    "/scripts",
    "/README.md",
    "/pyproject.toml",
    "/hatch_build.py",
]
exclude = [
    "/.git",
    "/.venv",
    "/.pytest_cache",
    "/__pycache__",
    "*.pyc",
    "/specs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wetwire_aws"]

[tool.ruff]
line-length = 88
target-version = "py311"
# Exclude generated code and imported examples from linting
exclude = ["src/wetwire_aws/resources", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=wetwire_aws --cov-report=term-missing"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/wetwire_aws"]
omit = ["*/tests/*", "*/codegen/*", "*/resources/*"]

[tool.ty.src]
# Only check main source code
include = ["src"]
# Exclude generated code and examples
exclude = ["examples/**", "src/wetwire_aws/resources/**"]

[tool.ty.rules]
# These patterns are used correctly but rely on dynamic Python features
# that ty cannot statically analyze:
# - PropertyTypeDescriptor returns types via __mro_entries__ (PEP 560)
# - Metaclass __getattr__ provides GetAtt attributes (e.g., MyRole.Arn)
unsupported-base = "ignore"  # class Foo(Module.Type.Nested): pattern
unresolved-attribute = "ignore"  # MyResource.Arn pattern


